feat: add jailed remote directory picker
(cherry picked from commit 762a630f9a9db82a67e7c86b836e8f47188c8d0c)
